@@ -1,0 +1,53 @@
+<?php
+/**
+ * Provides methods for password encryption using PHP 5.5+ password_hash()
+ *
+ * PHP Version 5.4
+ *
+ * This Source Code Form is subject to the terms of the Mozilla Public License,
+ * v. 2.0. If a copy of the MPL was not distributed with this file, You can
+ * obtain one at http://mozilla.org/MPL/2.0/.
+ *
+ * @category  phpMyFAQ
+ * @package   Enc
+ * @author    Thorsten Rinne <thorsten@phpmyfaq.de>
+ * @copyright 2014 phpMyFAQ Team
+ * @license   http://www.mozilla.org/MPL/2.0/ Mozilla Public License Version 2.0
+ * @link      http://www.phpmyfaq.de
+ * @since     2014-03-29
+ */
+
+if (!defined('IS_VALID_PHPMYFAQ')) {
+    exit();
+}
+
+/**
+ * PMF_Enc_Bcrypt
+ *
+ * @category  phpMyFAQ
+ * @package   Enc
+ * @author    Thorsten Rinne <thorsten@phpmyfaq.de>
+ * @copyright 2014 phpMyFAQ Team
+ * @license   http://www.mozilla.org/MPL/2.0/ Mozilla Public License Version 2.0
+ * @link      http://www.phpmyfaq.de
+ * @since     2014-03-29
+ */
+class PMF_Enc_Bcrypt extends PMF_Enc
+{
+    /**
+     * Encrypts the passwords and returns the result.
+     *
+     * @param  string $password String
+     *
+     * @return string
+     */
+    public function encrypt($password)
+    {
+        $options = [
+            'cost' => 42,
+            'salt' => $this->salt,
+        ];
+
+        return password_hash($password, PASSWORD_BCRYPT, $options);
+    }
+}
